<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/fragment_lessons_text_view_title"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/all_words_en_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all_words_en_ru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_all_words_en_ru"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/all_verbs_en_ru"
        app:layout_constraintEnd_toStartOf="@id/all_words_ru_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all_words_ru_en"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_all_words_ru_en"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/all_words_en_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/all_words_en_ru"
        app:layout_constraintTop_toTopOf="@id/all_words_en_ru" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all_verbs_en_ru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_all_verbs_en_ru"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/selected_words_en_ru"
        app:layout_constraintEnd_toStartOf="@id/all_verbs_ru_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_words_en_ru" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/all_verbs_ru_en"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_all_verbs_ru_en"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/all_verbs_en_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/all_verbs_en_ru"
        app:layout_constraintTop_toTopOf="@id/all_verbs_en_ru" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selected_words_en_ru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_selected_words_en_ru"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/selected_verbs_en_ru"
        app:layout_constraintEnd_toStartOf="@id/selected_words_ru_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/all_verbs_en_ru" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selected_words_ru_en"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_selected_words_ru_en"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/selected_words_en_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selected_words_en_ru"
        app:layout_constraintTop_toTopOf="@id/selected_words_en_ru" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selected_verbs_en_ru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_selected_verbs_en_ru"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/selected_verbs_ru_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_words_en_ru" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/selected_verbs_ru_en"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_button_sapphire"
        android:text="@string/fragment_lessons_button_selected_verbs_ru_en"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/selected_verbs_en_ru"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/selected_verbs_en_ru"
        app:layout_constraintTop_toTopOf="@id/selected_verbs_en_ru" />

</androidx.constraintlayout.widget.ConstraintLayout>