<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/select_container_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent="0.45"
        app:strokeColor="@color/white">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/select_tabs"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:tabIndicator="@drawable/shape_tab_layout"
            app:tabIndicatorColor="@color/sapphire"
            app:tabIndicatorGravity="stretch"
            app:tabRippleColor="@color/sapphire"
            app:tabSelectedTextColor="@android:color/white"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/light_slate_grey">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_words_select_tab_words" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_words_select_tab_verbs"
                android:textAllCaps="true" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.card.MaterialCardView>

    <CheckBox
        android:id="@+id/select_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:buttonTint="@color/sapphire"
        android:text="@string/fragment_words_select_checkbox_select_all"
        app:layout_constraintBottom_toTopOf="@id/words_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_container_card"
        app:layout_constraintVertical_bias="0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/words_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_all"
        tools:listitem="@layout/item_words_select" />

    <TextView
        android:id="@+id/empty_list_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/fragment_words_select_textview_empty_list_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_all" />

</androidx.constraintlayout.widget.ConstraintLayout>